# digsig

./: .gitignore  README.md  pyproject.toml
dslib/: signatures.py
tests/: test_signatures.py
