[project]
name = "DigSig"
version = "0.1"
description = "Library for digital signatures"
authors = [
    {name = "Brandon Corfman", email = "bcorfman@fastmail.fm"},
]
dependencies = [
    "cryptography>=36.0.1",
]
requires-python = ">=3.6"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/bcorfman/digsig.git"

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=6.2.5",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
